--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(cxxtools, 2.2.1, [Tommi Maekitalo <tommi@tntnet.org>])
+AC_INIT([cxxtools], [2.2.1], [Tommi Maekitalo <tommi@tntnet.org>])
 AM_INIT_AUTOMAKE([subdir-objects])
 
 AC_PREREQ([2.5.9])
